--- a/css/image-grid.css
+++ b/css/image-grid.css
@@ -6,7 +6,7 @@
   padding: 10px;
   max-width: 1100px;
   margin: auto;
-  background: #f2f2f2;
+  background: #212228;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
@@ -35,3 +35,18 @@
    height: 100%;
    object-fit: cover;
 } 
+
+/**** responsive *****/
+@media(max-width: 560px)
+{
+   .v-stretch{
+      grid-row: span 1;
+   }
+   .h-stretch{
+      grid-column: span 1;
+   }
+   .big-stretch{
+      grid-column: span 1;
+      grid-row: span 1;
+   }
+}
