Add dynamic birthday URL for shortcut key navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,9 @@
 {% endif %}
 
 <!-- Custom Scripts -->
+<script>
+  window.bdayUrl = "{{ '/bday.html' | relative_url }}";
+</script>
 <script src="{{ "/assets/js/shortcuts.js" | relative_url }}"></script>
 
 </html>
